[tool.poetry]
name = "repl_python3_Game-suite"
version = "0.1.0"
description = ""
authors = ["FeyisayoVictor <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
replit = "^3.2.4"
replit-play = "^0.0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
